--- a/app/public/application.css
+++ b/app/public/application.css
@@ -1,1 +1,16 @@
+body {
+  background: linear-gradient(135deg, #92e3fc 0%,#53cbf1 40%,#05abe0 100%);
+  height: 700px;
+}
 
+img {
+  background: linear-gradient(135deg, #d4e4ef 0%,#86aecc 100%);  border: solid;
+}
+
+.box {
+  border: solid;
+  background-color: white;
+  margin: 15px;
+  padding:5px;
+  float: left;
+}
