--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,7 @@
 <h1>My Robots</h1>
 <form action="/" method="GET">
   <button type="submit" class="btn btn-primary"/>Back to the Dashboard</button>
+  <a href="/robots/new"><button type="button" class="btn btn-success">New Robot</button></a>
 </form>
 <% @robots.each do |robot| %>
   <div class='box'>
