--- a/app/views/new_robot.erb
+++ b/app/views/new_robot.erb
@@ -9,5 +9,5 @@
   Department<br>
   <input type='text' class='form-control' name='robot[department]'/><br/>
   <input type='submit'class="btn btn-success"/>
-  <a href='/'><button type='button' class="btn btn-warning">Cancel</button></a>
+  <a href='/robots'><button type='button' class="btn btn-warning">Cancel</button></a>
 </form>
