--- a/app/public/application.css
+++ b/app/public/application.css
@@ -1,6 +1,6 @@
 body {
   background: linear-gradient(135deg, #92e3fc 0%,#53cbf1 40%,#05abe0 100%);
-  height: 700px;
+  background-attachment: fixed;
 }
 
 img {
@@ -11,6 +11,18 @@ img {
   border: solid;
   background-color: white;
   margin: 15px;
-  padding:5px;
+  padding: 10px;
   float: left;
+}
+.btn-primary {
+  margin-left: 15px;
+}
+
+h1, h2 {
+  font-weight: bold;
+  margin-left: 15px;
+}
+
+h4 {
+  text-decoration: underline;
 }
